--- a/Gaia/app/src/main/res/layout/activity_hello_world.xml
+++ b/Gaia/app/src/main/res/layout/activity_hello_world.xml
@@ -23,8 +23,21 @@
         android:layout_marginLeft="18dp"
         android:layout_marginStart="18dp"
         android:layout_marginTop="60dp"
-        android:id="@+id/button"
+        android:id="@+id/btn_connect"
         android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="pollURL"/>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:ems="10"
+        android:layout_below="@+id/btn_connect"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="29dp"
+        android:id="@+id/txt_searchString" />
 </RelativeLayout>
