--- a/Gaia/app/src/main/res/layout/activity_hello_world.xml
+++ b/Gaia/app/src/main/res/layout/activity_hello_world.xml
@@ -40,4 +40,13 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="29dp"
         android:id="@+id/txt_searchString" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/txt_view" />
 </RelativeLayout>
