--- a/Gaia/app/src/main/res/layout/activity_hello_world.xml
+++ b/Gaia/app/src/main/res/layout/activity_hello_world.xml
@@ -49,4 +49,14 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:id="@+id/txt_view" />
+
+    <Button
+        android:text="Take Photo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txt_view"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="39dp"
+        android:id="@+id/PhotoButton" />
 </RelativeLayout>
